@@ -9,6 +9,7 @@ import java.io.InputStream;
 import java.io.UnsupportedEncodingException;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.text.Collator;
@@ -32,13 +33,16 @@ import java.util.stream.Stream;
 import java.util.stream.StreamSupport;
 
 import org.antlr.runtime.RecognitionException;
+import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.tuple.Pair;
-import org.elasticsearch.common.base.Charsets;
 import org.elasticsearch.common.geo.GeoPoint;
-import org.elasticsearch.common.io.Streams;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.JsonMappingException;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.type.MapType;
+import com.fasterxml.jackson.databind.type.TypeFactory;
 import com.typesafe.config.Config;
 import com.typesafe.config.ConfigFactory;
 
@@ -75,6 +79,8 @@ import views.html.stars;
  * @author Fabian Steeg (fsteeg)
  */
 public class Application extends Controller {
+
+	private static final String UTF_8 = "UTF-8";
 
 	static final int MAX_FACETS = 150;
 
@@ -150,7 +156,7 @@ public class Application extends Controller {
 	 */
 	public static String currentUri() {
 		try {
-			return URLEncoder.encode(request().host() + request().uri(), "UTF-8");
+			return URLEncoder.encode(request().host() + request().uri(), UTF_8);
 		} catch (UnsupportedEncodingException e) {
 			Logger.error("Could not get current URI", e);
 		}
@@ -349,7 +355,7 @@ public class Application extends Controller {
 	public static Result journals() throws IOException {
 		try (InputStream stream = Play.application().classloader()
 				.getResourceAsStream("nwbib-journals.csv")) {
-			String csv = new String(Streams.copyToByteArray(stream), Charsets.UTF_8);
+			String csv = IOUtils.toString(stream, UTF_8);
 			List<String> lines = Arrays.asList(csv.split("\n"));
 			List<HashMap<String, String>> maps = lines.stream()
 					.filter(line -> line.split("\",\"").length == 2).map(line -> {
@@ -395,7 +401,7 @@ public class Application extends Controller {
 			}
 			result = classificationResult(t, placeholder);
 		}
-		Cache.set("classification." + t, result, ONE_DAY);
+		Cache.set("classification." + t, result);
 		return result;
 	}
 
@@ -506,6 +512,11 @@ public class Application extends Controller {
 				issued, medium, rpbspatial, rpbsubject, from, size, owner, t, sort,
 				details, location, word, corporation, raw, format);
 		return result.recover((Throwable throwable) -> {
+			Logger.error("Error on Lobid call with q={}, person={}, name={}, subject={}, id={}, publisher={},\n"
+					+ "issued={}, medium={}, rpbspatial={}, rpbsubject={}, from={}, size={}, owner={}, t={}, sort={},\n"
+					+ "details={}, location={}, word={}, corporation={}, raw={}, format={}", //
+					q, person, name, subject, id, publisher, issued, medium, rpbspatial, rpbsubject, from, size, owner,
+					t, sort, details, location, word, corporation, raw, format);
 			Logger.error("Could not call Lobid", throwable);
 			flashError();
 			return internalServerError(search.render("[]", q, person, name, subject,
@@ -968,6 +979,14 @@ public class Application extends Controller {
 		}
 	}
 
+	public static Promise<Result> putIdFromData(String secret) throws FileNotFoundException, RecognitionException, IOException {
+		return put(request().body().asJson().get("rpbId").textValue(), secret);
+	}
+
+	public static Promise<Result> deleteIdFromData(String secret) throws FileNotFoundException, RecognitionException, IOException {
+		return delete(request().body().asJson().get("rpbId").textValue(), secret);
+	}
+
 	private static Promise<Result> deleteFromIndex(String id) throws UnsupportedEncodingException {
 		Cache.remove(String.format("/%s", id));
 		WSRequest request = WS.url(elasticsearchUrl(id)).setHeader("Content-Type", "application/json");
@@ -976,18 +995,62 @@ public class Application extends Controller {
 
 	private static Promise<Result> transformAndIndex(String id, JsonNode jsonBody)
 			throws IOException, FileNotFoundException, RecognitionException, UnsupportedEncodingException {
+		JsonNode transformedJson = transform(jsonBody);
+		Promise<JsonNode> dataPromise = id.startsWith("f") && transformedJson.has("hbzId") ? // hbz-Fremddaten
+				addToLobidData(transformedJson) : Promise.pure(transformedJson);
+		return dataPromise.flatMap(result -> {
+			Cache.remove(String.format("/%s", id));
+			WSRequest request = WS.url(elasticsearchUrl(id)).setHeader("Content-Type", "application/json");
+			return request.put(result).map(response -> status(response.getStatus(), response.getBody()));
+		});
+	}
+
+	private static JsonNode transform(JsonNode jsonBody)
+			throws IOException, FileNotFoundException, RecognitionException {
 		File input = new File("conf/output/test-output-strapi.json");
 		File output = new File("conf/output/test-output-0.json");
-		Files.write(Paths.get(input.getAbsolutePath()), jsonBody.toString().getBytes(Charsets.UTF_8));
+		Files.write(Paths.get(input.getAbsolutePath()), jsonBody.toString().getBytes(Charset.forName(UTF_8)));
 		ETL.main(new String[] {"conf/rpb-test-titel-to-lobid.flux"});
 		String result = Files.readAllLines(Paths.get(output.getAbsolutePath())).stream().collect(Collectors.joining("\n"));
-		Cache.remove(String.format("/%s", id));
-		WSRequest request = WS.url(elasticsearchUrl(id)).setHeader("Content-Type", "application/json");
-		return request.put(result).map(response -> status(response.getStatus(), response.getBody()));
+		return Json.parse(result);
 	}
-	
+
+	private static Promise<JsonNode> addToLobidData(JsonNode transformedJson) {
+		String lobidUrl = transformedJson.get("hbzId").textValue();
+		WSRequest lobidRequest = WS.url(lobidUrl).setQueryParameter("format", "json");
+		Promise<JsonNode> lobidPromise = lobidRequest.get().map(WSResponse::asJson);
+		Promise<JsonNode> merged = lobidPromise.map(lobidJson -> mergeRecords(transformedJson, lobidJson));
+		return merged;
+	}
+
+	private static JsonNode mergeRecords(JsonNode transformedJson, JsonNode lobidJson)
+			throws JsonMappingException, JsonProcessingException {
+		ObjectMapper objectMapper = new ObjectMapper();
+		MapType mapType = TypeFactory.defaultInstance().constructMapType(Map.class, String.class, Object.class);
+		Map<String, Object> transformedMap = objectMapper.readValue(transformedJson.toString(), mapType);
+		Map<String, Object> lobidMap = objectMapper.readValue(lobidJson.toString(), mapType);
+		lobidMap.remove("describedBy");
+		transformedMap.put("hbzId", lobidMap.get("hbzId"));
+		transformedMap.remove("type");
+		transformedMap.keySet().forEach(key -> {
+			Object transformedObject = transformedMap.get(key);
+			Object lobidObject = lobidMap.getOrDefault(key, new ArrayList<Object>());
+			Object values = transformedObject instanceof List ? mergeValues(transformedObject, lobidObject)
+					: transformedObject;
+			lobidMap.put(key, values);
+		});
+		return Json.toJson(lobidMap);
+	}
+
+	private static Object mergeValues(Object transformedObject, Object lobidObject) {
+		List<Object> mergedValues = lobidObject instanceof List ? new ArrayList<>((List<?>) lobidObject)
+				: Arrays.asList(lobidObject);
+		mergedValues.addAll((List<?>) transformedObject);
+		return mergedValues;
+	}
+
 	private static String elasticsearchUrl(String id) throws UnsupportedEncodingException {
 		return "http://weywot3:9200/resources-rpb-test/resource/"
-				+ URLEncoder.encode("https://lobid.org/resources/" + id, "UTF-8");
+				+ URLEncoder.encode("https://lobid.org/resources/" + id, UTF_8);
 	}
 }
